tests/ui/cve/cve_2019_15551/cve_2019_15551_cross_fn.stderr
error: it is possible to double-drop the `VecSlice`'s buffer if the `grow` method is called with a capacity that is equal to the current capacity, which can lead to use-after-free and double-free bugs
  --> tests/ui/cve/cve_2019_15551/cve_2019_15551_cross_fn.rs:258:13
   |
LL |             deallocate(ptr, cap);
   |             ^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[deny(rpl::double_drop_on_corner_case)]` on by default

error: aborting due to 1 previous error

